--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,21 +24,21 @@
         <item>HAWUL</item>
         <item>JERE</item>
 
-        <item>ABADAM</item>
-        <item>ASKIRAUBA</item>
-        <item>BAMA</item>
-        <item>BIU</item>
-        <item>CHIBOK</item>
-        <item>DAMBOA</item>
+        <item>JERE</item>
+        <item>KALA BALGE</item>
+        <item>KONDUGA</item>
+        <item>KUKAWA</item>
+        <item>MAFA</item>
+        <item>MAGUMERI</item>
 
-        <item>ABADAM</item>
-        <item>ASKIRAUBA</item>
-        <item>BAMA</item>
-        <item>BIU</item>
-        <item>CHIBOK</item>
-        <item>DAMBOA</item>
+        <item>MMC</item>
+        <item>MARTE</item>
+        <item>MOBBAR</item>
+        <item>MONGONU</item>
+        <item>NGALA</item>
+        <item>NGAZAI</item>
 
-        <item>ABADAM</item>
+        <item>SHANI</item>
         <item>ASKIRAUBA</item>
         <item>BAMA</item>
         <item>BIU</item>
