--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,7 +189,7 @@
         <item>Fully Functional</item>
         <item>Fairly Functional</item>
         <item>Poorly Functional</item>
-        <item>Completely Destroyed and Nor Functional</item>
+        <item>Completely Destroyed and Not Functional</item>
         <item>Not Destroyed Functional</item>
     </string-array>
 
@@ -208,6 +208,7 @@
         <item>Faith Based</item>
         <item>Private Individual</item>
         <item>Private And Government</item>
+        <item>Not Available</item>
     </string-array>
 
     <string-array name="ngo_type">
