--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
         <item>GWOZA</item>
         <item>HAWUL</item>
         <item>JERE</item>
-        <item>JERE</item>
+        <item>KAGA</item>
         <item>KALA BALGE</item>
         <item>KONDUGA</item>
         <item>KUKAWA</item>
@@ -78,6 +78,7 @@
         <item>Available</item>
         <item>Available(RainingSeasonOnly)</item>
         <item>NotAvailable</item>
+        <item>Fairly Adequate</item>
     </string-array>
 
     <string-array name="social_media">
@@ -190,7 +191,8 @@
         <item>Fairly Functional</item>
         <item>Poorly Functional</item>
         <item>Completely Destroyed and Not Functional</item>
-        <item>Not Destroyed Functional</item>
+        <item>Not Functional</item>
+        <item>Not Available</item>
     </string-array>
 
     <string-array name="education">
@@ -229,6 +231,7 @@
         <item>Micro Finance</item>
         <item>Agricultural</item>
         <item>Merchant</item>
+        <item>Not Available</item>
     </string-array>
 
     <string name="a">
@@ -263,4 +266,35 @@
         \nStep 9:
         \nClick on Back To Menu to continue administering questionnaire.
     </string>
+
+
+    <string name="action_sign_in_short">Register</string>
+    <string name="email">Email</string>
+    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
+    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
+    <string name="change_email">Change Email</string>
+    <string name="change_password">Change Password</string>
+    <string name="send_password_reset_email">Credential Reset</string>
+    <string name="remove_user">Remove user</string>
+    <string name="new_pass">New Password</string>
+    <string name="title_activity_profile">Firebase</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_name">Fullname</string>
+    <string name="btn_login">LOGIN</string>
+    <string name="btn_link_to_register">Not yet registered? Get registered now!</string>
+    <string name="btn_link_to_login">Already registered. Login Me!</string>
+    <string name="title_activity_reset_password">ResetPasswordActivity</string>
+    <string name="btn_forgot_password">Forgot your password?</string>
+    <string name="btn_reset_password">Reset Password</string>
+    <string name="btn_back"><![CDATA[<< Back]]></string>
+    <string name="hint_new_email">New Email</string>
+    <string name="btn_change">Change</string>
+    <string name="btn_send">Send</string>
+    <string name="btn_remove">Remove</string>
+    <string name="btn_sign_out">Sign Out</string>
+    <string name="lbl_forgot_password">Forgot password?</string>
+    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
+
 </resources>
